--- a/ansible/roles/08_app_dev/templates/storage.yml.j2
+++ b/ansible/roles/08_app_dev/templates/storage.yml.j2
@@ -11,7 +11,7 @@ amazon:
   service: S3
   access_key_id: {{ access_key_id }}
   secret_access_key: {{ secret_access_key }}
-  region: ap-northeast-1
+  region: {{ region }}
   bucket: {{ S3_bucket }}
 
 # Remember not to checkin your GCS keyfile to a repository
