--- a/ansible/roles/08_app_dev/templates/puma.rb.j2
+++ b/ansible/roles/08_app_dev/templates/puma.rb.j2
@@ -3,7 +3,7 @@ app_dir = "/home/ec2-user/raisetech-live8-sample-app"
 
 directory app_dir
 
-bind "http://unix:/home/ec2-user/raisetech-live8-sample-app/tmp/sockets/puma.sock"  # Unix ソケットを介して通信
+bind "unix:///home/ec2-user/raisetech-live8-sample-app/tmp/sockets/puma.sock"  # Unix ソケットを介して通信
 
 pidfile "/home/ec2-user/raisetech-live8-sample-app/tmp/pids/puma.pid"
 
