--- a/ansible/roles/08_app_dev/templates/development.rb.j2
+++ b/ansible/roles/08_app_dev/templates/development.rb.j2
@@ -74,4 +74,5 @@ Rails.application.configure do
 
   # Raise error when a before_action's only/except options reference missing actions
   config.action_controller.raise_on_missing_callback_actions = true
+  config.hosts << "lec13-target-alb-1676288678.ap-northeast-1.elb.amazonaws.com"
 end
