--- a/ansible/roles/08_app_dev/templates/puma.rb.j2
+++ b/ansible/roles/08_app_dev/templates/puma.rb.j2
@@ -9,37 +9,39 @@ pidfile "/home/ec2-user/raisetech-live8-sample-app/tmp/pids/puma.pid"
 
 state_path "#{app_dir}/tmp/pids/puma.state"
 
+log_requests true
+stdout_redirect "/home/ec2-user/raisetech-live8-sample-app/log/puma.stdout.log", "/home/ec2-user/raisetech-live8-sample-app/log/puma.stderr.log", true
 
+max_threads_count = ENV.fetch("RAILS_MAX_THREADS") { 5 }
+min_threads_count = ENV.fetch("RAILS_MIN_THREADS") { max_threads_count }
+threads min_threads_count, max_threads_count
 
+plugin :tmp_restart
 # Puma can serve each request in a thread from an internal thread pool.
 # The `threads` method setting takes two numbers: a minimum and maximum.
 # Any libraries that use thread pools should be configured to match
 # the maximum value specified for Puma. Default is set to 5 threads for minimum
 # and maximum; this matches the default thread size of Active Record.
-#
-max_threads_count = ENV.fetch("RAILS_MAX_THREADS") { 5 }
-min_threads_count = ENV.fetch("RAILS_MIN_THREADS") { max_threads_count }
-threads min_threads_count, max_threads_count
+
 
 # Specifies the `worker_timeout` threshold that Puma will use to wait before
 # terminating a worker in development environments.
 #
-worker_timeout 3600 if ENV.fetch("RAILS_ENV", "development") == "development"
+#worker_timeout 3600 if ENV.fetch("RAILS_ENV", "development") == "development"
 
 # Specifies the `port` that Puma will listen on to receive requests; default is 3000.
 #
-port ENV.fetch("PORT") { 3000 }
+#port ENV.fetch("PORT") { 3000 }
 
 # Specifies the `environment` that Puma will run in.
 #
-environment ENV.fetch("RAILS_ENV") { "development" }
+#environment ENV.fetch("RAILS_ENV") { "development" }
 
 # Specifies the `pidfile` that Puma will use.
-pidfile ENV.fetch("PIDFILE") { "#{app_dir}/tmp/pids/server.pid" }
+# pidfile ENV.fetch("PIDFILE") { "#{app_dir}/tmp/pids/server.pid" }
 
 # Specifies the `sockfile` that Puma will use.
 # アプリケーションを配置している場所によってpathを変更する
-bind "unix:///home/ec2-user/raisetech-live8-sample-app/tmp/sockets/puma.sock"
 # Specifies the number of `workers` to boot in clustered mode.
 # Workers are forked web server processes. If using threads and workers together
 # the concurrency of the application would be max `threads` * `workers`.
@@ -56,4 +58,4 @@ bind "unix:///home/ec2-user/raisetech-live8-sample-app/tmp/sockets/puma.sock"
 # preload_app!
 
 # Allow puma to be restarted by `rails restart` command.
-plugin :tmp_restart
+
