--- a/ansible/roles/09_app_dev/templates/storage.yml.j2
+++ b/ansible/roles/09_app_dev/templates/storage.yml.j2
@@ -9,10 +9,9 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-  access_key_id: {{ access_key_id }}
-  secret_access_key: {{ secret_access_key }}
   region: {{ region }}
   bucket: {{ S3_bucket }}
+  profile: default
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
